@@ -71,6 +71,10 @@ Added a plugin system
 Added macro plugin
 Added netproxy plugin
 
+Andras Biro
+Windows related fixes
+Auto reconnect feature
+
 IDEAS - still a ToDo:
 ====================================
 
