@@ -1,5 +1,6 @@
 0.51.0, tba , 2018
 -moved repository to a new home
+-added auto reconnection feature
 
 0.50.0, August 6, 2018
 -added the byte counter plugin
